# adb-test-framework

./: .gitignore  AudioDBTest.cabal  README.md  audioDB-test-framework.cabal
examples/: example-config.yaml
src/: Main.hs
src/AudioDB/: Evaluation.hs  Test.hs
src/AudioDB/Test/: Types.hs
tests/: TestSuite.hs
