name: AudioDBTest
version: 0.1
synopsis: A test framework for the audioDB system
homepage: https://github.com/TransformingMusicology/audioDB-test-framework
author: Richard Lewis
license: GPL
copyright: (C) 2015, 2016 Richard Lewis
build-type: Simple
cabal-version: >= 1.8

library
  build-depends: base, AudioDB, datetime, yaml, aeson
  exposed-modules: AudioDB.Test, AudioDB.Test.Types, AudioDB.Test.Options
  hs-source-dirs: src
  ghc-options: -Wall

executable adbtest
  build-depends: base, AudioDB, optparse-applicative, datetime, yaml, aeson
  main-is: Main.hs
  hs-source-dirs: src
  ghc-options: -Wall
  extra-libraries: audioDB
