name: AudioDBTest
version: 0.1
synopsis: A test framework for the audioDB system
homepage: https://github.com/TransformingMusicology/adb-test-framework
author: Richard Lewis
license: GPL
copyright: (C) 2015, 2016 Richard Lewis
build-type: Simple
cabal-version: >= 1.8

library
  build-depends: base, AudioDB, datetime, yaml, aeson, bytestring
  exposed-modules: AudioDB.Test, AudioDB.Test.Types
  hs-source-dirs: src
  ghc-options: -Wall

executable adbtest
  build-depends: base, AudioDB, optparse-applicative, datetime, yaml, aeson, bytestring
  main-is: Main.hs
  hs-source-dirs: src
  ghc-options: -Wall
  extra-libraries: audioDB
