name: audioDB-test-framework
version: 0.1
synopsis: A test framework for the audioDB system
homepage: https://github.com/TransformingMusicology/adb-test-framework
author: Richard Lewis
license: GPL
copyright: (C) 2015, 2016 Richard Lewis
build-type: Simple
cabal-version: >= 1.9.2

library
  build-depends: base, audioDB, datetime, yaml, aeson, bytestring, text, logging
  exposed-modules: AudioDB.Test, AudioDB.Evaluation, AudioDB.Test.Types
  hs-source-dirs: src
  ghc-options: -Wall

executable adbtest
  build-depends: base, audioDB, optparse-applicative, datetime, yaml, aeson, bytestring, text, logging
  main-is: Main.hs
  hs-source-dirs: src
  ghc-options: -Wall
  extra-libraries: audioDB

test-suite adbtest-tests
  type: detailed-0.9
  test-module: TestSuite
  build-depends: base, Cabal >= 1.9.2, audioDB, datetime, yaml, aeson, bytestring, text, logging
  hs-source-dirs: src, tests
  other-modules: AudioDB.Test, AudioDB.Evaluation, AudioDB.Test.Types
  extra-libraries: audioDB
